# dedupe-variable-datetime

./: .travis.yml  LICENSE.txt  README.md  dev-requirements.txt  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
datetimetype/: __init__.py  datetime_predicates.py
dedupe/variables/: datetime.py  datetime_comparator.py  datetime_predicates.py
tests/: test_datetime_comparator.py
