[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dedupe-variable-datetime"
version = "2.0.0"
license = {text = "The MIT License: http://www.opensource.org/licenses/mit-license.php"}
description = "DateTime variable type for dedupe"
dependencies = ["dedupe>=3.0", "datetime-distance"]

[project.urls]
Homepage = "https://github.com/datamade/dedupe-variable-datetime"

[tool.setuptools]
packages = ["datetimetype"]
include-package-data = false
